--- a/camera_calibration_pipeline.yml
+++ b/camera_calibration_pipeline.yml
@@ -1,8 +1,9 @@
 nodes:
 - input.visual:
-    #source: rtsp://admin:a1s1n9apore@192.168.1.88:554/Streaming/Channels/101
+    # source: rtsp://admin:a1s1n9apore@192.168.1.88:554/Streaming/Channels/101
     source: 0
     threading: True
 - dabble.camera_calibration:
     scale_factor: 1
+    num_corners: [10, 7]
 - output.screen
