--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -6,7 +6,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-2019, ubuntu-18.04]
+        # os: [windows-2019, ubuntu-18.04]
+        os: [windows-2019]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
