- move 'converters/' into 'scripts/' folder - add 'model_format: tensorflow' to MoveNet benchmarking scripts - stylize names

--- a/scripts/benchmarks/tensorflow/run_singlepose_lightning.yml
+++ b/scripts/benchmarks/tensorflow/run_singlepose_lightning.yml
@@ -2,5 +2,6 @@ nodes:
 - input.visual:
     source: data/benchmark/single
 - model.movenet:
+    model_format: tensorflow
     model_type: singlepose_lightning
 - dabble.fps
