--- a/scripts/benchmarks/tensorflow/run_multipose_lightning.yml
+++ b/scripts/benchmarks/tensorflow/run_multipose_lightning.yml
@@ -2,5 +2,6 @@ nodes:
 - input.visual:
     source: data/benchmark/multi
 - model.movenet:
+    model_format: tensorflow
     model_type: multipose_lightning
 - dabble.fps
