--- a/peekingduck/configs/model/mask_rcnn.yml
+++ b/peekingduck/configs/model/mask_rcnn.yml
@@ -7,9 +7,11 @@ weights:
     pytorch:
       {
         model_subdir: mask_rcnn,
-        blob_file: { r50-fpn: mask-rcnn-r50-fpn.zip },
+        blob_file:
+          { r50-fpn: mask-rcnn-r50-fpn.zip, r101-fpn: mask-rcnn-r101-fpn.zip },
         classes_file: coco_90.json,
-        model_file: { r50-fpn: mask-rcnn-r50-fpn.pth },
+        model_file:
+          { r50-fpn: mask-rcnn-r50-fpn.pth, r101-fpn: mask-rcnn-r101-fpn.pth },
       },
   }
 min_size: 800
