node: add support for ResNet50-FPN
- ResNet50-FPN is now the default model, similar to model.mask_rcnn
- construct_backbone is now in the YolactEdge() object as the function is only called once
- add _get_model() function to allow for YolactEdge model_type config

--- a/peekingduck/configs/model/yolact_edge.yml
+++ b/peekingduck/configs/model/yolact_edge.yml
@@ -32,7 +32,7 @@ model_size:
 num_classes: 80
 
 model_format: pytorch
-model_type: r101-fpn # r50-fpn, r101-fpn, mobilevnet2
+model_type: r50-fpn
 input_size: 550
 detect: [0]
 score_threshold: 0.1
