--- a/peekingduck/configs/model/yolact_edge.yml
+++ b/peekingduck/configs/model/yolact_edge.yml
@@ -30,9 +30,8 @@ model_size:
     mobielnetv2: {}
   }
 num_classes: 80
-
 model_format: pytorch
-model_type: r50-fpn
+model_type: r50-fpn # r50-fpn, r101-fpn, mobilnetv2
 input_size: 550
 detect: [0]
 score_threshold: 0.1
