fix: update config and minor errors
- Added max_num_detections config
- Fixed typing error for dictionary key in model.py
- Pylint fixes for detector.py, model.py and utils.py

--- a/peekingduck/configs/model/yolact_edge.yml
+++ b/peekingduck/configs/model/yolact_edge.yml
@@ -34,5 +34,6 @@ model_format: pytorch
 model_type: r50-fpn # r50-fpn, r101-fpn, mobilnetv2
 input_size: 550
 detect: [0]
+max_num_detections: 100
 score_threshold: 0.1
 
