fix: resolve issue with class label mapping
- yolact_edge added to master_map.yml
- update torch.Tensor to Tensor for consistency
- fix typing error for mobilenetv2 in config file
- minor pylint fixes

--- a/peekingduck/configs/model/yolact_edge.yml
+++ b/peekingduck/configs/model/yolact_edge.yml
@@ -27,13 +27,13 @@ model_size:
   {
     r50-fpn: {},
     r101-fpn: {},
-    mobielnetv2: {}
+    mobilenetv2: {}
   }
 num_classes: 80
+
 model_format: pytorch
-model_type: r50-fpn # r50-fpn, r101-fpn, mobilnetv2
+model_type: r50-fpn
 input_size: 550
 detect: [0]
 max_num_detections: 100
 score_threshold: 0.1
-
