--- a/peekingduck/pipeline/nodes/model/master_map.yml
+++ b/peekingduck/pipeline/nodes/model/master_map.yml
@@ -4,6 +4,8 @@
 efficientdet: map_effdet
 yolo: map_yolo
 yolox: map_yolo
+mask_rcnn: map_effdet
+yolact_edge: map_yolo
 ...
 ---
 # This document holds the master class name to object ID mapping.
