fix: address bugs where masks and classes are not correctly displayed
- add crop function that constraints masks to bounding box coordinates
- fix issue where detect does not correctly constraint to detected IDs
- refactor magic number 550 with config for input_size

--- a/peekingduck/configs/model/yolact_edge.yml
+++ b/peekingduck/configs/model/yolact_edge.yml
@@ -32,8 +32,8 @@ model_size:
 num_classes: 80
 
 model_format: pytorch
-model_type: r50-fpn
+model_type: r50-fpn # r50-fpn, r101-fpn, mobilenetv2
 input_size: 550
 detect: [0]
 max_num_detections: 100
-score_threshold: 0.1
+score_threshold: 0.5
