--- a/setup.cfg
+++ b/setup.cfg
@@ -44,9 +44,8 @@ include_package_data = True
 [options.package_data]
 * =
     configs/*/*.yml
-    configs/node_template.yml
-    pipeline/nodes/model/master_map.yml
     optional_requirements.txt
+    viewer/PeekingDuckLogo.png
 
 [options.packages.find]
 include = peekingduck, peekingduck.*
