- restore deleted node_template.yml, master_map.yml for older pip versions - add dummy setup.py for older systems that need it

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,9 @@ include_package_data = True
 [options.package_data]
 * =
     configs/*/*.yml
+    configs/node_template.yml
     optional_requirements.txt
+    pipeline/nodes/model/master_map.yml
     viewer/PeekingDuckLogo.png
 
 [options.packages.find]
