feat: iou_threshold config for nms
- reduce repetition of code for torch.device
- exception handling when network_output is a NoneType

--- a/peekingduck/configs/model/yolact_edge.yml
+++ b/peekingduck/configs/model/yolact_edge.yml
@@ -36,4 +36,5 @@ model_type: r50-fpn # r50-fpn, r101-fpn, mobilenetv2
 input_size: 550
 detect: [0]
 max_num_detections: 100
-score_threshold: 0.5
+score_threshold: 0.2
+iou_threshold: 0.5
