feat: added decoder input node, modified media_writer, slight tweak to server

--- a/peekingduck/configs/output/media_writer.yml
+++ b/peekingduck/configs/output/media_writer.yml
@@ -2,3 +2,4 @@ input: ["img", "filename", "saved_video_fps", "pipeline_end"]
 output: ["none"]
 
 output_dir: 'PeekingDuck/data/output'
+add_timestamp: False
