--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     colorama == 0.4.4
     torch == 1.10.0
     torchvision == 0.11.1
+    typeguard >= 2.13.3
     scipy >= 1.4.1
 include_package_data = True
 
