docs: update all references from aimakerspace to aisingapore

--- a/.github/workflows/assign_issue_to_project.yml
+++ b/.github/workflows/assign_issue_to_project.yml
@@ -12,8 +12,8 @@ jobs:
 
     name: Assign to One Project
     steps:
-    - name: Assign NEW issue to One Project
-      uses: srggrs/assign-one-project-github-action@1.3.1
-      if: github.event.action == 'opened'
-      with:
-        project: 'https://github.com/orgs/aimakerspace/projects/1'
+      - name: Assign NEW issue to One Project
+        uses: srggrs/assign-one-project-github-action@1.3.1
+        if: github.event.action == 'opened'
+        with:
+          project: "https://github.com/orgs/aisingapore/projects/1"
