fix post-merge CI/CD errors with updated mask-rcnn ground truths

--- a/tests/pipeline/nodes/model/mask_rcnnv1/test_groundtruth.yml
+++ b/tests/pipeline/nodes/model/mask_rcnnv1/test_groundtruth.yml
@@ -94,28 +94,30 @@ r101-fpn:
   t1:
     bboxes:
       [
-        [0.1717, 0.2382, 0.5375, 0.9961],
-        [0.4989, 0.4031, 0.9006, 0.9986],
-        [0.2662, 0.327, 0.2803, 0.376],
-        [0.8126, 0.3231, 0.8302, 0.4083],
-        [0.5557, 0.3219, 0.5746, 0.4035],
-        [0.5448, 0.3228, 0.5605, 0.4026],
-        [0.6387, 0.327, 0.6567, 0.4036],
-        [0.5844, 0.3337, 0.5961, 0.4036],
-        [0.9284, 0.3227, 0.9435, 0.411],
-        [0.973, 0.3238, 0.9882, 0.3896],
-        [0.6042, 0.3361, 0.6188, 0.3999],
-        [0.9609, 0.3199, 0.9759, 0.3909],
-        [0.0448, 0.3203, 0.0511, 0.3483],
-        [0.393, 0.3254, 0.4048, 0.3628],
-        [0.6946, 0.3257, 0.7121, 0.4007],
-        [0.6676, 0.3259, 0.6824, 0.4062],
-        [0.617, 0.3215, 0.631, 0.399],
-        [0.5017, 0.3555, 0.5229, 0.3855],
-        [0.8969, 0.3232, 0.9107, 0.3865],
-        [0.8743, 0.3268, 0.884, 0.3803],
-        [0.6775, 0.3242, 0.6923, 0.4036],
-        [0.0265, 0.3209, 0.0344, 0.3491],
+        [0.1867, 0.2363, 0.5358, 1.0000],
+        [0.5033, 0.3925, 0.9003, 1.0000],
+        [0.8122, 0.3200, 0.8294, 0.4068],
+        [0.5431, 0.3208, 0.5598, 0.4024],
+        [0.2662, 0.3289, 0.2801, 0.3765],
+        [0.6382, 0.3251, 0.6570, 0.4035],
+        [0.5539, 0.3212, 0.5754, 0.4035],
+        [0.5831, 0.3242, 0.5960, 0.4032],
+        [0.9270, 0.3181, 0.9421, 0.4082],
+        [0.9730, 0.3257, 0.9865, 0.3879],
+        [0.3926, 0.3255, 0.4054, 0.3620],
+        [0.6928, 0.3250, 0.7113, 0.4052],
+        [0.9623, 0.3178, 0.9753, 0.3859],
+        [0.8968, 0.3206, 0.9119, 0.3872],
+        [0.6764, 0.3216, 0.6918, 0.4032],
+        [0.6152, 0.3200, 0.6318, 0.4009],
+        [0.4993, 0.3570, 0.5228, 0.3853],
+        [0.6036, 0.3333, 0.6192, 0.4002],
+        [0.9538, 0.3222, 0.9654, 0.3873],
+        [0.8740, 0.3264, 0.8837, 0.3796],
+        [0.7357, 0.3241, 0.7504, 0.3864],
+        [0.8822, 0.3230, 0.8939, 0.3781],
+        [0.3668, 0.3136, 0.3737, 0.3440],
+        [0.0278, 0.3248, 0.0334, 0.3498],
       ]
     bbox_labels:
       [
@@ -141,43 +143,47 @@ r101-fpn:
         "person",
         "person",
         "person",
+        "person",
+        "person",
       ]
     bbox_scores:
       [
-        1.,
-        1.,
-        0.964,
-        0.931,
-        0.922,
-        0.902,
-        0.874,
-        0.87,
-        0.831,
-        0.824,
-        0.769,
-        0.746,
-        0.738,
-        0.729,
-        0.674,
-        0.671,
-        0.606,
-        0.567,
-        0.558,
-        0.551,
-        0.526,
-        0.513,
+        0.9998,
+        0.9995,
+        0.9696,
+        0.9157,
+        0.9086,
+        0.8988,
+        0.8841,
+        0.8790,
+        0.8519,
+        0.7980,
+        0.7948,
+        0.7742,
+        0.7505,
+        0.7426,
+        0.7328,
+        0.7152,
+        0.6568,
+        0.6545,
+        0.5838,
+        0.5737,
+        0.5632,
+        0.5600,
+        0.5565,
+        0.5453,
       ]
   t2:
-    bboxes: [[0.1898, 0.0784, 0.5874, 0.9075], [0.0563, 0.3615, 0.0845, 0.4058]]
+    bboxes: [[0.1793, 0.0728, 0.5897, 0.9152], [0.0563, 0.3615, 0.0851, 0.4069]]
     bbox_labels: ["person", "person"]
-    bbox_scores: [1., 0.985]
+    bbox_scores: [0.9997, 0.9985]
   t4:
     bboxes:
       [
-        [0.5819, 0.3118, 0.6962, 0.7318],
-        [0.1931, 0.2909, 0.3468, 0.8095],
-        [0.3602, 0.3173, 0.4833, 0.7799],
-        [0.4608, 0.2993, 0.5799, 0.74],
+        [0.5799, 0.3138, 0.6936, 0.7308],
+        [0.1918, 0.2846, 0.3456, 0.8094],
+        [0.4633, 0.3047, 0.5807, 0.7499],
+        [0.3582, 0.3253, 0.4854, 0.7835],
       ]
     bbox_labels: ["person", "person", "person", "person"]
-    bbox_scores: [1., 1., 0.999, 0.999]
+    bbox_scores: [0.9997, 0.9997, 0.9996, 0.9990]
