--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -54,8 +54,7 @@ jobs:
       - name: Test installation from Test PyPI
         run: |
           sleep 300
-          pip install click pyyaml colorama typeguard
-          pip install -i https://test.pypi.org/simple/ peekingduck==$VERSION --no-dependencies # no tensorflow
+          pip install -i https://test.pypi.org/simple/ peekingduck==$VERSION
           peekingduck
       - name: Publish distribution 📦 to PyPI
         # only pushes to actual PyPI if its a tag (i.e. on release: published)
@@ -76,6 +75,5 @@ jobs:
       - name: Test installation from PyPI
         run: |
           sleep 300
-          pip install click pyyaml colorama typeguard
-          pip install peekingduck==$VERSION --no-dependencies # no tensorflow
+          pip install peekingduck==$VERSION
           peekingduck
