--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -54,7 +54,11 @@ jobs:
       - name: Test installation from Test PyPI
         run: |
           sleep 300
-          pip install -i https://test.pypi.org/simple/ peekingduck==$VERSION
+          # need to separately install requirements (from pypi repo), 
+          # as some packages are not available on test.pypi.org repo
+          # e.g. tqdm 4.45 not available
+          pip install -r requirements.txt
+          pip install -i https://test.pypi.org/simple/ peekingduck==$VERSION --no-deps
           peekingduck
       - name: Publish distribution 📦 to PyPI
         # only pushes to actual PyPI if its a tag (i.e. on release: published)
