feat: refactored output.google_cloud to suit input.consume

--- a/peekingduck/configs/output/google_cloud.yml
+++ b/peekingduck/configs/output/google_cloud.yml
@@ -1,4 +1,5 @@
-input: ["img"]
+input: ["img", "filename"]
 output: ["none"]
 
-bucket_name: autoscaling-tests
+bucket_name: peekingduck
+folder_name: None
