--- a/peekingduck/configs/output/media_writer.yml
+++ b/peekingduck/configs/output/media_writer.yml
@@ -1,5 +1,5 @@
 input: ["img", "filename", "saved_video_fps", "pipeline_end"]
 output: ["none"]
 
-output_dir: 'PeekingDuck/data/output'
+output_dir: "PeekingDuck/data/output"
 add_timestamp: False
