--- a/peekingduck/configs/input/consume.yml
+++ b/peekingduck/configs/input/consume.yml
@@ -1,2 +1,6 @@
 input: ["message"]
 output: ["img", "filename", "pipeline_end", "saved_video_fps"]
+
+image_format: jpg
+image_key: image
+filename_keys: ["name", "timestamp"]
