feat: consolidate producers in send.py, removed /image in server, removed changes in __main__.py

--- a/peekingduck/configs/input/consume.yml
+++ b/peekingduck/configs/input/consume.yml
@@ -3,4 +3,4 @@ output: ["img", "filename", "pipeline_end", "saved_video_fps"]
 
 image_format: jpg
 image_key: image
-filename_keys: ["name", "timestamp"]
+filename_keys: []
