feat: refactored send.py, added Dockerfile, added new dependencies, made password arg hidden

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,10 @@ install_requires =
     torchvision == 0.11.1
     typeguard >= 2.13.3
     scipy >= 1.4.1
+    pika
+    uvicorn
+    fastapi
+    google-cloud-storage
 include_package_data = True
 
 # Optional Requirements that can be configured how pip behaves in circumstances
