--- a/.github/workflows/standup_bot.yml
+++ b/.github/workflows/standup_bot.yml
@@ -2,20 +2,20 @@ name: Stand-up Bot
 on:
   schedule:
     # runs at 1:30am UTC (09:30am SGT) on Weekdays only
-    - cron: '30 1 * * 1-5'
+    - cron: "30 1 * * 1-5"
 
 jobs:
   build-publish-test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: Post to Discord
-      run: |
-        pip install requests pytz
-        bash ./scripts/trigger_standupbot.sh ${{ secrets.DISCORD_WEBHOOK }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Post to Discord
+        run: |
+          pip install requests pytz
+          bash ./scripts/trigger_standupbot.sh ${{ secrets.DISCORD_WEBHOOK }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
