--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ torchvision == 0.11.1
 tqdm == 4.45.0
 typeguard >= 2.13.3
 scipy >= 1.4.1
-pika
-uvicorn
-fastapi
-google-cloud-storage
+pika >= 1.3.0
+uvicorn >= 0.17.6
+fastapi >= 0.78.0
+google-cloud-storage >= 1.38.0
