--- a/setup.cfg
+++ b/setup.cfg
@@ -36,10 +36,10 @@ install_requires =
     torchvision == 0.11.1
     typeguard >= 2.13.3
     scipy >= 1.4.1
-    pika
-    uvicorn
-    fastapi
-    google-cloud-storage
+    pika >= 1.3.0
+    uvicorn >= 0.17.6
+    fastapi >= 0.78.0
+    google-cloud-storage >= 1.38.0
 include_package_data = True
 
 # Optional Requirements that can be configured how pip behaves in circumstances
