feat: implement huggingface segmentation models, create HuggingFaceAdaptor abstraction

--- a/peekingduck/configs/model/huggingface_hub.yml
+++ b/peekingduck/configs/model/huggingface_hub.yml
@@ -7,6 +7,7 @@ weights: { default: { model_subdir: huggingface } }
 task: object_detection
 model_format: default
 model_type: null
+device: "cpu"
 detect: ["*"]
 iou_threshold: 0.6
 score_threshold: 0.5
