--- a/peekingduck/configs/model/huggingface_hub.yml
+++ b/peekingduck/configs/model/huggingface_hub.yml
@@ -1,5 +1,5 @@
 input: ["img"]
-output: ["bboxes", "bbox_labels", "bbox_scores"]
+output: ["bboxes", "bbox_labels", "bbox_scores", "masks"]
 
 weights_parent_dir: null
 weights: { default: { model_subdir: huggingface } }
@@ -9,6 +9,11 @@ model_format: default
 model_type: null
 device: "cpu"
 detect: ["*"]
-iou_threshold: 0.6
 score_threshold: 0.5
+
+# instance_segmentation specific configs
+mask_threshold: 0.5
+
+# object_detection specific configs
+iou_threshold: 0.6
 agnostic_nms: true
