feat: add other config options for pose estimation model, rename pose handler to be coco specific

--- a/peekingduck/configs/model/mediapipe.yml
+++ b/peekingduck/configs/model/mediapipe.yml
@@ -16,3 +16,8 @@ task: object_detection
 subtask: null
 model_type: 0
 score_threshold: 0.5
+
+# pose_estimation specific configs
+static_image_mode: false
+smooth_landmarks: true
+tracking_score_threshold: 0.5
