--- a/peekingduck/configs/draw/poses.yml
+++ b/peekingduck/configs/draw/poses.yml
@@ -3,4 +3,4 @@ output: ["none"]
 
 keypoint_dot_color: [0, 255, 0]
 keypoint_connect_color: [0, 255, 255]
-keypoint_text_color: [255, 0, 255]
+keypoint_dot_radius: 5
