--- a/peekingduck/configs/draw/poses.yml
+++ b/peekingduck/configs/draw/poses.yml
@@ -1,5 +1,6 @@
 input: ["keypoints", "keypoint_scores", "keypoint_conns", "img"]
 output: ["none"]
+callbacks: {}
 
 keypoint_dot_color: tomato # [77, 103, 255]
 keypoint_connect_color: champagne # [156, 223, 244]
