--- a/peekingduck/configs/model/mediapipe_hub.yml
+++ b/peekingduck/configs/model/mediapipe_hub.yml
@@ -18,6 +18,8 @@ model_type: 0
 score_threshold: 0.5
 
 # pose_estimation specific configs
+max_num_hands: 2
 static_image_mode: false
 smooth_landmarks: true
 tracking_score_threshold: 0.5
+keypoint_format: "coco"
