build: add numba as dependency and bump numpy min version

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     click == 7.1.2
     colorama == 0.4.4
     huggingface_hub >= 0.9.1
+    numba >= 0.56.4
     numpy >= 1.17.3
     opencv-contrib-python >= 4.5.2.54
     protobuf <= 3.20.1
