refactor: rename draw.poses to draw.pose

--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -2,5 +2,5 @@ nodes:
 - input.visual:
     source: https://storage.googleapis.com/peekingduck/videos/wave.mp4
 - model.posenet
-- draw.poses
+- draw.pose
 - output.screen
