--- a/tests/use_cases/systest_social_distancing.yml
+++ b/tests/use_cases/systest_social_distancing.yml
@@ -8,7 +8,7 @@ nodes:
 - dabble.check_nearby_objs:
     near_threshold: 1.5
     tag_msg: "TOO CLOSE!"
-- draw.poses
+- draw.pose
 - draw.bbox     # not in demo config, but included here
 - draw.tag:
     show: ["flags"]
