--- a/use_cases/group_size_checking.yml
+++ b/use_cases/group_size_checking.yml
@@ -9,6 +9,6 @@ nodes:
     near_threshold: 1.5
 - dabble.check_large_groups:
     group_size_threshold: 2
-- draw.poses
+- draw.pose
 - draw.group_bbox_and_tag
 - output.screen
