refactor: rename draw.zones to draw.zone

--- a/use_cases/zone_counting.yml
+++ b/use_cases/zone_counting.yml
@@ -12,7 +12,7 @@ nodes:
     ]
 - draw.bbox
 - draw.btm_midpoint
-- draw.zones
+- draw.zone
 - draw.legend:
     show: ["zone_count"]
 - output.screen
