--- a/peekingduck/configs/output/screen.yml
+++ b/peekingduck/configs/output/screen.yml
@@ -5,3 +5,4 @@ callbacks: {}
 window_name: "PeekingDuck"
 window_size: { do_resizing: False, width: 1280, height: 720 }
 window_loc: { x: 0, y: 0 }
+window_image_wait: true
