feat: default image_waitkey to false

--- a/peekingduck/configs/output/screen.yml
+++ b/peekingduck/configs/output/screen.yml
@@ -5,4 +5,5 @@ callbacks: {}
 window_name: "PeekingDuck"
 window_size: { do_resizing: False, width: 1280, height: 720 }
 window_loc: { x: 0, y: 0 }
-window_image_wait: true
+
+image_waitkey: false
