feat: add in the show_scores config to be available in the pipeline.

--- a/peekingduck/configs/draw/bbox.yml
+++ b/peekingduck/configs/draw/bbox.yml
@@ -1,5 +1,6 @@
-input: ["bboxes", "img", "bbox_labels"]
+input: ["bboxes", "img", "bbox_labels", "bbox_scores"]
 output: ["none"]
 callbacks: {}
 
 show_labels: False
+show_scores: False
