bug: fix unnecessary check for other keys,consistence image_waitkey,bool

--- a/peekingduck/configs/output/screen.yml
+++ b/peekingduck/configs/output/screen.yml
@@ -6,4 +6,4 @@ window_name: "PeekingDuck"
 window_size: { do_resizing: False, width: 1280, height: 720 }
 window_loc: { x: 0, y: 0 }
 
-image_waitkey: false
+image_waitkey: False
