feat: allowing users to set the bounding box color

--- a/use_cases/setting_bbox_color.yml
+++ b/use_cases/setting_bbox_color.yml
@@ -4,5 +4,5 @@ nodes:
 - model.yolox
 - draw.bbox:
     show_labels: True
-    color_choice: [229, 255, 0] # Turquoise
+    color_choice: [229, 255, 0] # [ B, G, R ] Turquoise
 - output.screen
