refactor: dummy pipeline

--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -1,6 +1,9 @@
 defaults:
   # - base_config
   - datamodule: common
+  - model: common
+  - trainer: common
+  - callbacks: common
   # You typically want _self_ somewhere after the schema (base_config)
   - _self_
   - override hydra/job_logging: custom
