refactor: datamodule to data_module, dataloader to data_loader

--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   # - base_config
-  - datamodule: common
+  - data_module: common
   - model: common
   - trainer: common
   - callbacks: common
