--- a/peekingduck/training/configs/data_module/common.yaml
+++ b/peekingduck/training/configs/data_module/common.yaml
@@ -1,24 +1,25 @@
 defaults:
+  - data_set: common
   - data_loader:
-    - train
-    - test
+      - train
+      - test
   - transform:
-    - train
-    - test
+      - train
+      - test
   - data_adapter:
-    - pytorch
+      - pytorch
 
 data_source: "data/train/"
 label_source: "data/train.csv"
 image_path_col_name: "image_path"
-class_name_to_id:
-  - airplane: 0
-  - automobile: 1
-  - bird: 2
-  - cat:  3
-  - deer: 4
-  - dog:  5
-  - frog: 6
-  - horse:  7
-  - ship: 8
-  - truck:  9
+class_name_to_id: 
+  airplane: 0
+  automobile: 1
+  bird: 2
+  cat: 3
+  deer: 4
+  dog: 5
+  frog: 6
+  horse: 7
+  ship: 8
+  truck: 9
