--- a/peekingduck/training/configs/model/common.yaml
+++ b/peekingduck/training/configs/model/common.yaml
@@ -1,5 +1,6 @@
-adapter: torchvision
-model_type: classification
-model_name: resnet18
+adapter: "torchvision"
+model_type: "classification"
+model_name: "resnet18"
+num_classes: 10
 pretrained: True
 # You typically want _self_ somewhere after the schema (base_config)
