feat: basic train_dataloader and valid_dataloader

--- a/peekingduck/training/configs/data_module/common.yaml
+++ b/peekingduck/training/configs/data_module/common.yaml
@@ -1,11 +1,14 @@
 defaults:
-  - data_set: common
-  - data_loader:
-      - train
-      - test
-  - transform:
-      - train
-      - test
-  - data_adapter:
-      - pytorch
+    - data_set: common
+    - data_loader:
+          - train
+          - test
+    - resample: train_test_split
+    - transform:
+          - train
+          - test
+    - data_adapter:
+          - pytorch
 
+debug: true
+num_debug_samples: 1000
