--- a/peekingduck/training/configs/trainer/common.yaml
+++ b/peekingduck/training/configs/trainer/common.yaml
@@ -45,7 +45,7 @@ optimizer_params:
     optimizer: "AdamW"
     optimizer_params:
         lr: 0.0003  # bs: 32 -> lr = 3e-4
-        betas: (0.9, 0.999)
+        betas: [0.9, 0.999]
         amsgrad: False
         weight_decay: 0.000001
         eps: 0.00000001
