--- a/peekingduck/training/configs/trainer/common.yaml
+++ b/peekingduck/training/configs/trainer/common.yaml
@@ -63,7 +63,7 @@ scheduler_params:
 
 global_train_params:
     epochs: 10  # 10 when not debug
-    use_amp: True
+    use_amp: False
     patience: 3
     classification_type: "multiclass"
     monitored_metric:
