--- a/peekingduck/training/configs/data_module/common.yaml
+++ b/peekingduck/training/configs/data_module/common.yaml
@@ -3,6 +3,7 @@ defaults:
     - data_loader:
           - train
           - test
+          - valid
     - resample: train_test_split
     - transform:
           - train
@@ -11,4 +12,4 @@ defaults:
           - pytorch
 
 debug: true
-num_debug_samples: 1000
+num_debug_samples: 500
