--- a/peekingduck/training/configs/metrics/common.yaml
+++ b/peekingduck/training/configs/metrics/common.yaml
@@ -1,1 +1,1 @@
-evaluate: ['accuracy', 'precision', 'recall', 'auroc']
+evaluate: ['accuracy', 'precision', 'recall', 'auroc', 'multiclass_calibration_error']
