--- a/peekingduck/training/configs/hydra/job_logging/custom.yaml
+++ b/peekingduck/training/configs/hydra/job_logging/custom.yaml
@@ -4,7 +4,7 @@ formatters:
   json:
     format: "%(asctime)s %(process)d %(name)s %(levelname)s %(message)s"
     # class: pythonjsonlogger.jsonlogger.JsonFormatter
-    datefmt: "%Y-%m-%dT%H:%M:%S%z"
+    datefmt: "%Y%m%d_%H%M%S%z"
 
 handlers:
   console:
@@ -16,7 +16,7 @@ handlers:
       class: logging.handlers.RotatingFileHandler
       level: DEBUG
       formatter: json
-      filename: debug.log
+      filename: "${hydra.run.dir}/debug.log"
       maxBytes: 10485760 # 10MB
       backupCount: 20
       encoding: utf8
@@ -26,7 +26,7 @@ handlers:
       class: logging.handlers.RotatingFileHandler
       level: INFO
       formatter: json
-      filename: info.log
+      filename: "${hydra.run.dir}/info.log"
       maxBytes: 10485760 # 10MB
       backupCount: 20
       encoding: utf8
@@ -36,7 +36,7 @@ handlers:
       class: logging.handlers.RotatingFileHandler
       level: ERROR
       formatter: json
-      filename: errors.log
+      filename: "${hydra.run.dir}/errors.log"
       maxBytes: 10485760 # 10MB
       backupCount: 20
       encoding: utf8
