--- a/peekingduck/training/configs/trainer/common.yaml
+++ b/peekingduck/training/configs/trainer/common.yaml
@@ -1,4 +1,3 @@
-
 # PipelineConfig:
 #   data: DataConfig = Data()
 #   resample: ResamplingConfig = Resampling()
@@ -17,10 +16,10 @@
 #   all_params: Dict[str, Any] = field(default_factory=dict)
 
 stores:
-    project_name: "CIFAR-10"
-    unique_id: ${now:%Y%m%dT%H%M%S} # field(default_factory=generate_uuid4)
+    project_name: ${project_name}
+    unique_id: ${stores.unique_id} # field(default_factory=generate_uuid4)
     logs_dir: "" # Path = field(init=False)
-    model_artifacts_dir: "./artifacts/${project_name}/${trainer.stores.unique_id}/"
+    model_artifacts_dir: "./artifacts/${project_name}/${stores.unique_id}/"
 
 criterion_params:
     train_criterion: "CrossEntropyLoss"
@@ -40,19 +39,17 @@ criterion_params:
         reduction: "mean"
         label_smoothing: 0.0
 
-
 optimizer_params:
     optimizer: "AdamW"
     optimizer_params:
-        lr: 0.0003  # bs: 32 -> lr = 3e-4
+        lr: 0.0003 # bs: 32 -> lr = 3e-4
         betas: [0.9, 0.999]
         amsgrad: False
         weight_decay: 0.000001
         eps: 0.00000001
 
-
 scheduler_params:
-    scheduler: "CosineAnnealingWarmRestarts"  # Debug
+    scheduler: "CosineAnnealingWarmRestarts" # Debug
     scheduler_params:
         T_0: 10
         T_mult: 1
@@ -60,9 +57,8 @@ scheduler_params:
         last_epoch: -1
         verbose: False
 
-
 global_train_params:
-    epochs: 2  # 10 when not debug
+    epochs: 2 # 10 when not debug
     use_amp: False
     patience: 3
     model_name: ${model.model_name}
