--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-click == 7.1.2
+click >= 7.1.2
 colorama == 0.4.4
 huggingface_hub >= 0.9.1
-numpy >= 1.17.3
+numpy >= 1.18.5
 opencv-contrib-python >= 4.5.2.54
 protobuf <= 3.20.1
 pyyaml >= 5.3
