--- a/peekingduck/training/configs/trainer/common.yaml
+++ b/peekingduck/training/configs/trainer/common.yaml
@@ -62,7 +62,7 @@ global_train_params:
     use_amp: False
     patience: 3
     model_name: ${model.model_name}
-    classification_type: ${classification_type}
+    classification_type: ${data_module.data_set.classification_type}
     monitored_metric:
         monitor: val_MulticlassAccuracy
         mode: max
