--- a/peekingduck/training/configs/data_module/data_set/common.yaml
+++ b/peekingduck/training/configs/data_module/data_set/common.yaml
@@ -2,9 +2,9 @@ download: False
 url: "https://github.com/gao-hongnan/peekingduck-trainer/releases/download/v0.0.1-alpha/cifar10.zip"
 blob_file: "cifar10.zip"
 root_dir: "data"
-train_dir: "./${data_module.data_set.root_dir}"
-test_dir: "./${data_module.data_set.root_dir}"
-train_csv: "./${data_module.data_set.root_dir}/train.csv"
+train_dir: "./${.root_dir}"
+test_dir: "./${.root_dir}"
+train_csv: "./${.root_dir}/train.csv"
 image_path_col_name: "image_path"
 target_col_name: "class_id"
 classification_type: "multiclass"
