fit: refactor metricsAdapter to be more generic to allow future enhancement

--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -13,7 +13,7 @@ defaults:
 device: "cpu"
 project_name: "CIFAR-10"
 debug: True
-
+framework: "pytorch" # 'pytorch' | 'tensorflow'
 
 hydra:
   run:
