refactor: move the model defination to config file and refactor

--- a/peekingduck/training/configs/model/common.yaml
+++ b/peekingduck/training/configs/model/common.yaml
@@ -1,6 +1,8 @@
 adapter: "torchvision"
-model_type: "classification"
+task: "classification"
 model_name: "resnet18"
+model_type:
+    _target_: src.model.pytorch_model.ImageClassificationModel
 num_classes: ${data_module.data_set.num_classes}
 device: ${device}
 pretrained: True
