--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -1,12 +1,11 @@
 defaults:
-  # - base_config
-  - data_module: common
-  - model: common
-  - trainer: common
-  - callbacks: common
-  - metrics: common
-  - stores: common
-  # You typically want _self_ somewhere after the schema (base_config)
+  - use_case: common
+  - data_module: ${use_case}
+  - model: ${use_case}
+  - trainer: ${use_case}
+  - callbacks: ${use_case}
+  - metrics: ${use_case}
+  - stores: ${use_case}
   - _self_
   - override hydra/job_logging: custom
 
