fix: exclude __* directories, pytorch check

--- a/peekingduck/training/configs/data_module/common.yaml
+++ b/peekingduck/training/configs/data_module/common.yaml
@@ -9,6 +9,7 @@ defaults:
 
 module:
       _target_: src.data_module.data_module.ImageClassificationDataModule
+      _recursive_: False
 
 debug: ${debug}
-num_debug_samples: 500
+num_debug_samples: 1000
