--- a/peekingduck/training/configs/trainer/common.yaml
+++ b/peekingduck/training/configs/trainer/common.yaml
@@ -68,3 +68,8 @@ global_train_params:
     monitored_metric:
         monitor: val_MulticlassAccuracy
         mode: max
+    framework:
+        pytorch:
+            - _target_: src.trainer.pytorch_trainer.pytorchTrainer
+        tensorflow:
+            - _target_: src.trainer.tensorflow_trainer.tensorflowTrainer
