--- a/peekingduck/training/configs/model/common.yaml
+++ b/peekingduck/training/configs/model/common.yaml
@@ -3,7 +3,7 @@ task: "classification"
 model_name: "resnet18"
 model_type:
     _target_: src.model.pytorch_model.ImageClassificationModel
-num_classes: ${data_module.data_set.num_classes}
+num_classes: ${data_module.dataset.num_classes}
 device: ${device}
 pretrained: True
 # You typically want _self_ somewhere after the schema (base_config)
