--- a/peekingduck/training/configs/data_module/dataset/rsna.yaml
+++ b/peekingduck/training/configs/data_module/dataset/rsna.yaml
@@ -1,22 +1,17 @@
 download: False
 url: "https://github.com/gao-hongnan/peekingduck-trainer/releases/download/v0.0.1-alpha/cifar10.zip"
-blob_file: "cifar10.zip"
+blob_file: "rsna.zip"
 root_dir: "data"
-train_dir: "./${.root_dir}"
-test_dir: "./${.root_dir}"
+train_dir: "./${.root_dir}/${project_name}"
+test_dir: "./${.root_dir}/${project_name}"
 train_csv: "./${.root_dir}/${project_name}/train.csv"
 image_path_col_name: "image_path"
-target_col_name: "class_id"
+target_col_name: "cancer"
+# stratify_by:
+#   - "patient_id"
+#   - ${.target_col_name}
 classification_type: "multiclass"
-num_classes: 10
+num_classes: 2
 class_name_to_id:
-  airplane: 0
-  automobile: 1
-  bird: 2
-  cat: 3
-  deer: 4
-  dog: 5
-  frog: 6
-  horse: 7
-  ship: 8
-  truck: 9
+  benign: 0
+  malignant: 1
