--- a/peekingduck/training/configs/callbacks/common.yaml
+++ b/peekingduck/training/configs/callbacks/common.yaml
@@ -7,3 +7,5 @@ callbacks:
   - _target_: src.callbacks.early_stopping.EarlyStopping
     mode: 'max'
     monitor: 'val_MulticlassAccuracy'
+    patience: ${trainer.global_train_params.patience}
+    min_delta: 0.000001 # 1e-6
