fix: stratified_sample_df to stratify debugging sampling

--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -1,4 +1,4 @@
-device: "cpu"
+device: "auto"
 project_name: "cifar10" #rsna | cifar10
 debug: True
 framework: "pytorch" # 'pytorch' | 'tensorflow'
