--- a/peekingduck/training/configs/data_module/dataset/cifar10.yaml
+++ b/peekingduck/training/configs/data_module/dataset/cifar10.yaml
@@ -2,8 +2,8 @@ download: False
 url: "https://github.com/gao-hongnan/peekingduck-trainer/releases/download/v0.0.1-alpha/cifar10.zip"
 blob_file: "cifar10.zip"
 root_dir: "data"
-train_dir: "./${.root_dir}"
-test_dir: "./${.root_dir}"
+train_dir: "./${.root_dir}/${project_name}"
+test_dir: "./${.root_dir}/${project_name}"
 train_csv: "./${.root_dir}/${project_name}/train.csv"
 image_path_col_name: "image_path"
 target_col_name: "class_id"
