--- a/peekingduck/training/configs/data_module/common.yaml
+++ b/peekingduck/training/configs/data_module/common.yaml
@@ -1,5 +1,5 @@
 defaults:
-      - dataset: rsna
+      - dataset: cifar10
       - resample: train_test_split
       - transform:
               - train
