--- a/peekingduck/training/configs/trainer/common.yaml
+++ b/peekingduck/training/configs/trainer/common.yaml
@@ -58,12 +58,12 @@ scheduler_params:
         verbose: False
 
 global_train_params:
-    epochs: 15 # 10 when not debug
+    epochs: 50
     use_amp: False
     patience: 3
     model_name: ${model.model_name}
     debug: ${debug}
-    debug_epochs: 15
+    debug_epochs: 3
     classification_type: ${data_module.dataset.classification_type}
     monitored_metric:
         monitor: val_MulticlassAccuracy
