--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -4,7 +4,7 @@ debug: True
 framework: "pytorch" # 'pytorch' | 'tensorflow'
 
 defaults:
-  - use_case: common
+  - use_case: classification # classification | detection | segmentation
   - data_module: cifar10 #rsna | cifar10
   - model: ${use_case}
   - trainer: ${use_case}
