--- a/peekingduck/training/configs/trainer/classification.yaml
+++ b/peekingduck/training/configs/trainer/classification.yaml
@@ -61,7 +61,7 @@ global_train_params:
     epochs: 50
     use_amp: False
     patience: 3
-    model_name: ${model.model_name}
+    model_name: ${model[${framework}].model_name}
     debug: ${debug}
     debug_epochs: 3
     classification_type: ${data_module.dataset.classification_type}
