--- a/peekingduck/training/configs/callbacks/classification.yaml
+++ b/peekingduck/training/configs/callbacks/classification.yaml
@@ -7,7 +7,7 @@ pytorch:
   - _target_: src.callbacks.early_stopping.EarlyStopping
     mode: 'max'
     monitor: 'val_MulticlassAccuracy'
-    patience: ${trainer.global_train_params.patience}
+    patience: ${trainer.pytorch.global_train_params.patience}
     min_delta: 0.000001 # 1e-6
 
 tensorflow:
@@ -19,5 +19,5 @@ tensorflow:
   - _target_: src.callbacks.early_stopping.EarlyStopping
     mode: 'max'
     monitor: 'val_MulticlassAccuracy'
-    patience: ${trainer.global_train_params.patience}
+    patience: ${trainer.tensorflow.global_train_params.patience}
     min_delta: 0.000001 # 1e-6
