--- a/peekingduck/training/configs/trainer/classification.yaml
+++ b/peekingduck/training/configs/trainer/classification.yaml
@@ -43,7 +43,7 @@ pytorch:
 
     global_train_params:
         epochs: 50
-        use_amp: False
+        use_amp: True
         patience: 3
         model_name: ${model[${framework}].model_name}
         debug: ${debug}
